review feedback
Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>

revert changes related to other issue (Refactor tests structure in compas-sct)

Signed-off-by: Samir Romdhani <samir.romdhani@rte-france.com>