@@ -5,10 +5,10 @@
 package org.lfenergy.compas.sct.app;
 
 import lombok.NonNull;
-import org.apache.commons.lang3.tuple.Pair;
 import org.lfenergy.compas.scl2007b4.model.SCL;
 import org.lfenergy.compas.sct.commons.dto.HeaderDTO;
 import org.lfenergy.compas.sct.commons.dto.SubNetworkDTO;
+import org.lfenergy.compas.sct.commons.dto.SubNetworkTypeDTO;
 import org.lfenergy.compas.sct.commons.exception.ScdException;
 import org.lfenergy.compas.sct.commons.scl.SclService;
 import org.lfenergy.compas.sct.commons.scl.SubstationService;
@@ -27,12 +27,12 @@ import java.util.*;
 public class SclAutomationService {
 
     /**
-     * Possible Subnetwork and ConnectAP names which should be used in generated SCD in order a have global coherence
+     * Possible Subnetwork and ConnectedAP names which should be used in generated SCD in order a have global coherence
      * Configuration based on used framework can be used to externalize this datas
      */
-    private static final Map<Pair<String, String>, List<String>> comMap = Map.of(
-            Pair.of("RSPACE_PROCESS_NETWORK", SubNetworkDTO.SubnetworkType.MMS.toString()), Arrays.asList("PROCESS_AP", "TOTO_AP_GE"),
-            Pair.of("RSPACE_ADMIN_NETWORK", SubNetworkDTO.SubnetworkType.IP.toString()), Arrays.asList("ADMIN_AP", "TATA_AP_EFFACEC"));
+    public static final List<SubNetworkTypeDTO> SUB_NETWORK_TYPES = List.of(
+            new SubNetworkTypeDTO("RSPACE_PROCESS_NETWORK", SubNetworkDTO.SubnetworkType.MMS.toString(), List.of("PROCESS_AP", "TOTO_AP_GE")),
+            new SubNetworkTypeDTO("RSPACE_ADMIN_NETWORK", SubNetworkDTO.SubnetworkType.IP.toString(), List.of("ADMIN_AP", "TATA_AP_EFFACEC")));
 
     private SclAutomationService() {
         throw new UnsupportedOperationException("This is a utility class and cannot be instantiated");
@@ -48,14 +48,13 @@ public class SclAutomationService {
      * @throws ScdException
      */
     public static SCL createSCD(@NonNull SCL ssd, @NonNull HeaderDTO headerDTO, List<SCL> stds) throws ScdException {
-        SCL scd = SclService.initScl(Optional.ofNullable(headerDTO.getId()),
-                headerDTO.getVersion(), headerDTO.getRevision());
+        SCL scd = SclService.initScl(headerDTO.getId(), headerDTO.getVersion(), headerDTO.getRevision());
         if (!headerDTO.getHistoryItems().isEmpty()) {
             HeaderDTO.HistoryItem hItem = headerDTO.getHistoryItems().get(0);
             SclService.addHistoryItem(scd, hItem.getWho(), hItem.getWhat(), hItem.getWhy());
         }
         SubstationService.addSubstation(scd, ssd);
-        SclService.importSTDElementsInSCD(scd, stds, comMap);
+        SclService.importSTDElementsInSCD(scd, stds, SUB_NETWORK_TYPES);
         SclService.removeAllControlBlocksAndDatasetsAndExtRefSrcBindings(scd);
         return scd;
     }
